# signals_manager

./: CMakeLists.txt  README.md
cmake/: README.md  build_flags.cmake  build_utils.cmake
libs/signals/: CMakeLists.txt  manager.h  types.h
libs/signals/details/: manager.cpp  semaphore.h  utils.cpp  utils.h
src/: CMakeLists.txt
src/libs/signals/: CMakeLists.txt  manager.h  types.h
src/libs/signals/details/: manager.cpp  queue.h  semaphore.h  utils.h
src/tests/: CMakeLists.txt  ut_signals.cpp
tests/: ut_signals.cpp
